--- a/test/index.html
+++ b/test/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="lib/mocha.css" />
-        <script src="./lib/sis-js.js"></script>
+        <script src="./lib/sis-client.js"></script>
         <script src="./lib/mocha.js"></script>
         <script src="./lib/expect.js"></script>
         <script>
